--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
   },
   "keywords": [],
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "@asyncapi/parser": "^1.17.2",
+    "@eventcatalog/utils": "^0.2.0",
+    "chalk": "^5.2.0",
+    "fs-extra": "^11.1.0"
+  },
   "devDependencies": {
+    "@eventcatalog/types": "^0.4.0",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
     "jest": "^29.3.1",
