--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@asyncapi/parser": "^1.17.2",
     "@eventcatalog/utils": "^0.2.0",
     "chalk": "^5.2.0",
-    "fs-extra": "^11.1.0"
+    "fs-extra": "^11.1.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@eventcatalog/types": "^0.4.0",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
+    "@types/yamljs": "^0.2.31",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
