--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@eventcatalog/utils": "^0.2.0",
     "chalk": "^5.2.0",
     "fs-extra": "^11.1.0",
+    "uuid": "^9.0.0",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
