--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
   "devDependencies": {
     "@eventcatalog/types": "^0.4.0",
     "@types/fs-extra": "^9.0.13",
+    "@types/glob": "^8.0.0",
     "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
+    "@types/uuid": "^9.0.0",
     "@types/yamljs": "^0.2.31",
+    "glob": "^8.0.3",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.4"
