--- a/spec/assets/account-service-2.0.0.yml
+++ b/spec/assets/account-service-2.0.0.yml
@@ -1,8 +1,8 @@
 asyncapi: '2.2.0'
 info:
-  title: Users Service
-  version: 1.0.0
-  description: This service is in charge of users
+  title: AccountService
+  version: 2.0.0
+  description: This service is in charge of processing user signups
 channels:
   user/signedup:
     subscribe:
@@ -21,3 +21,6 @@ components:
             type: string
             format: email
             description: Email of the user
+          avatar:
+            type: string
+            description: A uri to the avatar of the user
