--- a/spec/assets/users-service-1.0.0.yml
+++ b/spec/assets/users-service-1.0.0.yml
@@ -1,8 +1,8 @@
 asyncapi: '2.2.0'
 info:
-  title: Account Service
+  title: UsersService
   version: 1.0.0
-  description: This service is in charge of processing user signups
+  description: This service is in charge of users
 channels:
   user/signedup:
     subscribe:
