--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc --watch",
+    "release": "npm build && npm publish",
     "test": "jest",
     "test:watch": "jest --watchAll"
   },
@@ -17,6 +18,7 @@
     "@eventcatalog/utils": "^0.2.0",
     "chalk": "^5.2.0",
     "fs-extra": "^11.1.0",
+    "lodash": "^4.17.21",
     "uuid": "^9.0.0",
     "yamljs": "^0.3.0"
   },
@@ -25,6 +27,7 @@
     "@types/fs-extra": "^9.0.13",
     "@types/glob": "^8.0.0",
     "@types/jest": "^29.2.5",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.18",
     "@types/uuid": "^9.0.0",
     "@types/yamljs": "^0.2.31",
